# fisica

./: .gitignore  .rustfmt.toml  Cargo.toml  Changelog.md  README.md  check.sh
.cargo/: config.toml
.github/workflows/: check.yml
src/: constants.rs  docs-header.html  lib.rs  math.rs  prefixes.rs  unit.rs
src/auto_impls/: mod.rs  tests.rs
src/engine/: body.rs  mod.rs  scene.rs  shape.rs
src/math/: mod.rs  vectors.rs
src/quantities/: acceleration.rs  amount.rs  area.rs  charge.rs  current.rs  density.rs  energy.rs  force.rs  frequency.rs  gfs.rs  intensity.rs  length.rs  mass.rs  mod.rs  moment.rs  momentum.rs  power.rs  pressure.rs  speed.rs  temperature.rs  time.rs  volume.rs
src/units/: acceleration.rs  amount.rs  area.rs  charge.rs  current.rs  density.rs  energy.rs  force.rs  frequency.rs  gfs.rs  intensity.rs  length.rs  mass.rs  mod.rs  moment.rs  momentum.rs  power.rs  pressure.rs  speed.rs  temperature.rs  time.rs  velocity.rs  volume.rs
src/wip/engine/: body.rs  shape.rs
