[package]
name = "fisica"
description = "A physics library"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/fisica"
documentation = "https://docs.rs/fisica"
license = "MIT/Apache-2.0"
include = [
	"/src/",
	"/Cargo.toml",
	"/LICENSE*",
	"/README.md",
]
categories = [ "science" ]
keywords = [ "physics"  ]

[dependencies]
glam = "0.20"
paste = "1.0"

[features]
default = ["std", "safe"]
safe = []
std = []
nightly = []

[dev-dependencies]
float_eq = "0.7"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]
features = ["nightly"]

[badges]
maintenance = { status = "experimental" }
