[package]
name = "fisica"
description = "A physics library"
version = "0.1.1"
edition = "2021"
rust-version = "1.57"
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/fisica"
documentation = "https://docs.rs/fisica"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/res/*",
	"/Cargo.toml",
	"/README.md",
	"/LICENSE-*",
]
categories = [ "science" ]
keywords = [ "physics"  ]
publish = true

[dependencies]
glam = "0.20"
paste = "1.0"

[features]
default = ["std", "safe"]
safe = []
std = []
nightly = []

[dev-dependencies]
float_eq = "0.7"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./res/rustdoc-header.html" ]
features = ["nightly"]

[badges]
maintenance = { status = "experimental" }
