[package]
name = "fisica"
description = "A physics library"
version = "0.2.0"
edition = "2021"
rust-version = "1.71.1"
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/fisica"
documentation = "https://docs.rs/fisica"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/res/*.html",
	"/Cargo.toml",
	"/README.md",
	"/LICENSE-*",
]
categories = [ "science", "no-std::no-alloc" ]
keywords = [ "physics"  ]
publish = true

[dependencies]
devela = "0.7.1"
glam = "0.24.1"

[features]
default = ["std", "safe"]

std = ["alloc"] # enable features that depend on "std"
alloc = [] # features that depend on allocation (unused)
no-std = [] # features incompatible with "std" (unused)

safe = [] # forbid unsafe at the crate level
safest = ["safe"] # forbid unsafe recursively (unused)

unsafe = [] # enable unsafe at the crate level (unused)
unsafest = ["unsafe"] # enable unsafe recursively (unused)

nightly = [] # used only for better docs
nightly_docs = ["nightly", "std", "unsafe"]

[dev-dependencies]
float_eq = "0.7"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./res/rustdoc-header.html" ]
no-default-features = true
features = ["nightly_docs"]

[badges]
maintenance = { status = "experimental" }
